--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,17 @@
 .form{
+  align-items: center;
   display: flex;
   flex-direction: column;
-  max-width: 200px;
+}
+.form>label {
+  min-width: 50vw;
+  padding: 5px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+}
+.form>button {
+  margin-top: 10px;
+  padding: 10px;
+  min-width: 30vw;
 }
