--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,15 @@
+.required::before {
+  content: '*';
+  color: red;
+}
 .form{
   align-items: center;
   display: flex;
   flex-direction: column;
 }
 .form>label {
-  min-width: 50vw;
-  padding: 5px;
+  min-width: 70vw;
+  padding: 1vw;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -14,4 +18,19 @@
   margin-top: 10px;
   padding: 10px;
   min-width: 30vw;
+}
+.field{
+  display: flex;
+  flex-direction: row;
+  
+}
+/* legend {
+  background-color: #000;
+  color: #fff;
+  padding: 3px 6px;
+} */
+.checkbox{
+  font-size: smaller;
+  display: flex;
+  flex-direction: row;
 }
